--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
 <body>
     <div class="mystyle">
-        <h1>내가 본 영화 중 GOAT!</h1>
+        <h1>내가 본 영화 중 GOAT!!</h1>
         <button type="button" class="btn btn-primary">GOAT</button>
     </div>
     <div class="mypost">
